--- a/charts/hdfs-datanode-k8s/values.yaml
+++ b/charts/hdfs-datanode-k8s/values.yaml
@@ -59,3 +59,6 @@ kerberosKeytabsSecret: hdfs-kerberos-keytabs
 # the jsvc utility. See the reference doc at
 # https://hadoop.apache.org/docs/r2.7.2/hadoop-project-dist/hadoop-common/SecureMode.html#Secure_DataNode
 jsvcEnabled: true
+
+# Whether or not to expect namenodes in the HA setup.
+namenodeHAEnabled: true
