Support non-root uid, gid

--- a/charts/hdfs-journalnode-k8s/templates/journalnode-statefulset.yaml
+++ b/charts/hdfs-journalnode-k8s/templates/journalnode-statefulset.yaml
@@ -81,6 +81,11 @@ spec:
             - name: editdir
               mountPath: /hadoop/dfs/journal
       restartPolicy: Always
+      {{- if .Values.podSecurityContext.enabled }}
+      securityContext:
+        runAsUser: {{ .Values.podSecurityContext.runAsUser }}
+        fsGroup: {{ .Values.podSecurityContext.fsGroup }}
+      {{- end }}
   volumeClaimTemplates:
   - metadata:
       name: editdir
