--- a/charts/hdfs-journalnode-k8s/values.yaml
+++ b/charts/hdfs-journalnode-k8s/values.yaml
@@ -17,3 +17,10 @@
 
 # How many journal nodes to launch as a quorum.
 quorumSize: 3
+
+# Parameters for determining which Unix user and group IDs to use in pods.
+# Persistent volume permission may need to match these.
+podSecurityContext:
+  enabled: false
+  runAsUser: 0
+  fsGroup: 1000
