--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,8 @@ before_script:
 - curl -Lo kubectl https://storage.googleapis.com/kubernetes-release/release/v1.7.0/bin/linux/amd64/kubectl && chmod +x kubectl && sudo mv kubectl /usr/local/bin/
 # Download minikube.
 - curl -Lo minikube https://storage.googleapis.com/minikube/releases/latest/minikube-linux-amd64 && chmod +x minikube && sudo mv minikube /usr/local/bin/
+# Run minikube with none driver.
+# See https://blog.travis-ci.com/2017-10-26-running-kubernetes-on-travis-ci-with-minikube
 - sudo minikube start --vm-driver=none --kubernetes-version=v1.7.0
 # Fix the kubectl context, as it's often stale.
 - minikube update-context
@@ -20,3 +22,4 @@ script:
 - kubectl cluster-info 
 - kubectl run travis-example --image=redis
 - kubectl get deployment
+# TODO: Run HDFS.
