Configure namenode HA (#33)
* Add namenode HA design doc

* Switch images to png

* Refer to png imaegs

* Add journalnode

* Hack HA

* Both NNs start up

* Use FQDNs for services

* Clean up

* Let datanode know HA

* Enable automatic fail-over

* Avoid interactive format

* Avoid multi homed config

* Add FIXME

* Add http port

* Simplfy start script writing

* Use PV

* Increase version #, make HA the only option

* Fix bugs

* Address FIXMEs

* Support journal node quorum size

* Updated READMEs

* Reintroduce hdfs-simple-namenode-k8s as non-HA, non-Kerberos setup

* Fix a typo in README

* Add a TODO for kerberizing journal nodes

* Turn off datanode hostname check

* Support non-root uid, gid

* Make journalnode volme size optional

* Add a client pod chart

* Specify disruption budget

* Use tolerate-unready-endpoints for stable DNS entries

* Address review comments

* Use a config map to support different namenode start scripts

--- a/charts/hdfs-journalnode-k8s/values.yaml
+++ b/charts/hdfs-journalnode-k8s/values.yaml
@@ -12,6 +12,18 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
-name: hdfs-datanode-k8s
-version: 0.2
-description: Hadoop Distributed File System (HDFS) hosted by Kubernetes.
+
+# Default values for template variables.
+
+# How many journal nodes to launch as a quorum.
+quorumSize: 3
+
+# Size of editata persistent volume per journalnode instance.
+editdataVolumeSize: 20Gi
+
+# Parameters for determining which Unix user and group IDs to use in pods.
+# Persistent volume permission may need to match these.
+podSecurityContext:
+  enabled: false
+  runAsUser: 0
+  fsGroup: 1000
