--- a/charts/hdfs-namenode-k8s/values.yaml
+++ b/charts/hdfs-namenode-k8s/values.yaml
@@ -15,10 +15,33 @@
 
 # Default values for template variables.
 
-# Path of the local disk directory on a cluster node that will contain the namenode
-# fsimage and edit logs. This will be mounted to the namenode as a k8s HostPath
-# volume.
-nameNodeHostPath: /hdfs-name
+# Name of the namenode start script in the config map.
+namenodeStartScript: format-and-run.sh
+
+# A namenode start script that can have user specified content.
+# Can be used to conduct ad-hoc operation as specified by a user.
+# To use this, also set the namenodeStartScript variable above
+# to custom-run.sh.
+customRunScript: |
+  #!/bin/bash -x
+  echo Write your own script content!
+  echo This message will disappear in 10 seconds.
+  sleep 10
+
+# Size of metadata persistent volume per namenode instance.
+metadataVolumeSize: 100Gi
+
+# Zookeeper quorum to use for determining which namenode instance is active.
+# Separated by the comma character.
+zookeeperQuorum: zk-0.zk-svc.default.svc.cluster.local:2181,zk-1.zk-svc.default.svc.cluster.local:2181,zk-2.zk-svc.default.svc.cluster.local:2181
+
+
+# Journal nodes quorum to use for sharing editlogs from an active namenode to
+# a standby namenode. Separated by the semicolon character.
+journalQuorum: hdfs-journalnode-0.hdfs-journalnode.default.svc.cluster.local:8485;hdfs-journalnode-1.hdfs-journalnode.default.svc.cluster.local:8485;hdfs-journalnode-2.hdfs-journalnode.default.svc.cluster.local:8485
+
+# Whether or not to enable pinning of namenode pods to labeled k8s cluster nodes.
+namenodePinningEnabled: false
 
 # Custom hadoop config keys passed through env variables to hadoop uhopper images.
 # See https://hub.docker.com/r/uhopper/hadoop/ to get more details
@@ -29,6 +52,13 @@ nameNodeHostPath: /hdfs-name
 customHadoopConfig: {}
   # Set variables through a hash where env variable is the key, e.g.
   # HDFS_CONF_dfs_datanode_use_datanode_hostname: "false"
+
+# Parameters for determining which Unix user and group IDs to use in pods.
+# Persistent volume permission may need to match these.
+podSecurityContext:
+  enabled: false
+  runAsUser: 0
+  fsGroup: 1000
 
 # Whether or not Kerberos support is enabled.
 kerberosEnabled: false
