--- a/charts/hdfs-datanode-k8s/templates/datanode-daemonset.yaml
+++ b/charts/hdfs-datanode-k8s/templates/datanode-daemonset.yaml
@@ -72,8 +72,27 @@ spec:
             - name: {{ $key | quote }}
               value: {{ $value | quote }}
             {{- end }}
+            {{- if .Values.namenodeHAEnabled }}
+            - name: CORE_CONF_fs_defaultFS
+              value: hdfs://hdfs-k8s
+            - name: HDFS_CONF_dfs_nameservices
+              value: hdfs-k8s
+            - name: HDFS_CONF_dfs_ha_namenodes_hdfs___k8s
+              value: nn0,nn1
+            - name: HDFS_CONF_dfs_namenode_rpc___address_hdfs___k8s_nn0
+              value: hdfs-namenode-0.hdfs-namenode.default.svc.cluster.local:8020
+            - name: HDFS_CONF_dfs_namenode_rpc___address_hdfs___k8s_nn1
+              value: hdfs-namenode-1.hdfs-namenode.default.svc.cluster.local:8020
+            - name: HDFS_CONF_dfs_namenode_http___address_hdfs___k8s_nn0
+              value: hdfs-namenode-0.hdfs-namenode.default.svc.cluster.local:50070
+            - name: HDFS_CONF_dfs_namenode_http___address_hdfs___k8s_nn1
+              value: hdfs-namenode-1.hdfs-namenode.default.svc.cluster.local:50070
+            {{- else }}
             - name: CORE_CONF_fs_defaultFS
               value: hdfs://hdfs-namenode-0.hdfs-namenode.default.svc.cluster.local:8020
+            {{- end }}
+            - name: MULTIHOMED_NETWORK
+              value: "0"
             # The below uses two loops to make sure the last item does not have comma. It uses index 0
             # for the last item since that is the only special index that helm template gives us.
             - name: HDFS_CONF_dfs_datanode_data_dir
