--- a/charts/hdfs-simple-namenode-k8s/Chart.yaml
+++ b/charts/hdfs-simple-namenode-k8s/Chart.yaml
@@ -12,6 +12,6 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
-name: hdfs-datanode-k8s
+name: hdfs-simple-namenode-k8s
 version: 0.2
 description: Hadoop Distributed File System (HDFS) hosted by Kubernetes.
