--- a/charts/hdfs-namenode-k8s/values.yaml
+++ b/charts/hdfs-namenode-k8s/values.yaml
@@ -43,6 +43,9 @@ journalQuorum: hdfs-journalnode-0.hdfs-journalnode.default.svc.cluster.local:848
 # Whether or not to enable pinning of namenode pods to labeled k8s cluster nodes.
 namenodePinningEnabled: false
 
+# Whether or not to use hostNetwork in namenode pods.
+hostNetworkEnabled: true
+
 # Custom hadoop config keys passed through env variables to hadoop uhopper images.
 # See https://hub.docker.com/r/uhopper/hadoop/ to get more details
 # Please note that these are not hadoop env variables, but docker env variables that
