--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,5 @@ script:
 - tests/run.sh
 
 after_script:
-- tests/teardown.sh
+- tests/cleanup.sh
+- TEARDOWN_DELETE_MINIKUBE=true TEARDOWN_DELETE_BIN=true tests/teardown.sh
