Supports CI with minikube on travis (#34)
* Add travis yaml

* Add comments

* Add test setup script

* Fix a typo

* Fix minor bugs

* Fix a bug

* Add test run script

* Add helm

* Try to run zookeeper

* build nsenter

* Use sudo for moving nsenter

* Suppress a warning

* Zookeeper runs ok

* Add journal nodes

* Fix a typo

* Journal nodes run ok

* Minor clean up

* Minor clean up

* Journal nodes run ok

* Run namenodes

* Check namenode

* Launch all helms

* Fix a bug

* Avoid kube-dns crash

* Downgrade minikube to v0.23.0

* Use kubernetes 1.9.x

* Add comments

* All pods run ok

* Clean up

* Clean up

* Copy files to HDFS for tests

* Clean up

* Clean up

* Clean up

* Fix zookeeper service name

* Made pod check more robust

* Clean up

* Clean up

* Retry client commands

* Clean up

* Data node use the right dir

* Show travis disks

* Fix a typo

* Clean up

* Separate out cleanup.sh

* Clean up

* Minor clean up

* Update documentation

* Fix required version number

* Clean up links

* Clean up links

* Fix indentation

* Add link

* Fix typo

* Address review comments

--- a/charts/hdfs-namenode-k8s/templates/namenode-statefulset.yaml
+++ b/charts/hdfs-namenode-k8s/templates/namenode-statefulset.yaml
@@ -105,11 +105,18 @@ spec:
       labels:
         app: hdfs-namenode
     spec:
+      {{- if .Values.hostNetworkEnabled }}
       # Use hostNetwork so datanodes connect to namenode without going through an overlay network
       # like weave. Otherwise, namenode fails to see physical IP address of datanodes.
+      # Disabling this will break data locality as namenode will see pod virtual IPs and fails to
+      # equate them with cluster node physical IPs associated with data nodes.
+      # We currently disable this only for CI on minikube.
       hostNetwork: true
       hostPID: true
       dnsPolicy: ClusterFirstWithHostNet
+      {{- else }}
+      dnsPolicy: ClusterFirst
+      {{- end }}
       affinity:
         podAntiAffinity:
           requiredDuringSchedulingIgnoredDuringExecution:
