--- a/charts/hdfs-namenode-k8s/templates/namenode-statefulset.yaml
+++ b/charts/hdfs-namenode-k8s/templates/namenode-statefulset.yaml
@@ -223,12 +223,16 @@ spec:
           image: busybox:1.27.1
           command: ['sh', '-c']
           args:
-            - cp /kerberos-keytabs/$MY_NODE_NAME.keytab /kerberos-keytab-copy/hdfs.keytab
+            - cp /kerberos-keytabs/${MY_KERBEROS_NAME}*.keytab /kerberos-keytab-copy/hdfs.keytab
           env:
-            - name: MY_NODE_NAME
+            - name: MY_KERBEROS_NAME
               valueFrom:
                 fieldRef:
+                {{- if .Values.hostNetworkEnabled }}
                   fieldPath: spec.nodeName
+                {{- else }}
+                  fieldPath: metadata.name
+                {{- end }}
           volumeMounts:
             - name: kerberos-keytabs
               mountPath: /kerberos-keytabs
