--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,12 @@
 sudo: required
 
 env:
-  # Travis does not work well with minikube 0.26.x yet.
-  - CASES=_basic.sh K8S_VERSION=v1.9.4 MINIKUBE_VERSION=v0.25.2
+  - CASES=_basic.sh
   - CASES=_kerberos.sh
 
 before_script:
+# Required for K8s v1.10.x. See
+# https://github.com/kubernetes/kubernetes/issues/61058#issuecomment-372764783
 - sudo mount --make-shared /
 - sudo service docker restart
 - USE_MINIKUBE_DRIVER_NONE=true USE_SUDO_MINIKUBE=true tests/setup.sh
