--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,7 @@ env:
 before_script:
 # Required for K8s v1.10.x. See
 # https://github.com/kubernetes/kubernetes/issues/61058#issuecomment-372764783
-- sudo mount --make-shared /
-- sudo service docker restart
+- sudo mount --make-shared / && sudo service docker restart
 - USE_MINIKUBE_DRIVER_NONE=true USE_SUDO_MINIKUBE=true tests/setup.sh
 
 script:
